# clint

./: Cargo.toml  LICENSE  README.md
.github/: pull_request_template.md
.github/workflows/: build.yml  release.yml
src/: config.rs  default_config.toml  diagnostics.rs  linter.rs  main.rs
src/rules/: best_practices.rs  mod.rs  security.rs  style.rs  unsafe_functions.rs
test_project/: bad_code.c  example.h
test_project/.clint/: config.toml
